--- a/templates/adminheader.html
+++ b/templates/adminheader.html
@@ -10,8 +10,8 @@
     
 
     <a href="adminhome">Home</a>
-    <a href="admin_view_teamsregisterd.html">View Registered teams</a>
+    <a href="admin_view_teamsregisterd">View Registered teams</a>
     <a href="admin_view_users">View Public Users</a>
     <a href="admin_manage_tournaments">Manage tournaments</a>
-    <a href="login">View Rating</a>
+    <a href="admin_view_rating">View Rating</a>
     <a href="/">Logout</a>
