--- a/templates/reg.html
+++ b/templates/reg.html
@@ -5,19 +5,11 @@
 <center>
     <div style="margin: 100px auto;">
         <form action="" method="post">
-            <h1>Doctor registration</h1>
+            <h1>Team Registration</h1>
             <table>
                 <tr>
-                    <th>First Name</th>
-                    <td><input type="text" required class="form-control" name="fname" id=""></td>
-                </tr>
-                <tr>
-                    <th>Last Name</th>
-                    <td><input type="text" required class="form-control" name="lname" id=""></td>
-                </tr>
-                <tr>
-                    <th>Place</th>
-                    <td><input type="text" required class="form-control" name="place" id=""></td>
+                    <th>Name</th>
+                    <td><input type="text" required class="form-control" name="name" id=""></td>
                 </tr>
                 <tr>
                     <th>Phone</th>
@@ -28,9 +20,14 @@
                     <td><input type="text" required class="form-control" name="email" id=""></td>
                 </tr>
                 <tr>
-                    <th>Qualification</th>
-                    <td><input type="text" required class="form-control" name="qual" id=""></td>
+                    <th>Team About</th>
+                    <td><input type="text" required class="form-control" name="teamabout" id=""></td>
                 </tr>
+                <tr>
+                    <th>City</th>
+                    <td><input type="text" required class="form-control" name="city" id=""></td>
+                </tr>
+                
                 <tr>
                     <th>Username</th>
                     <td><input type="text" required class="form-control" name="uname" id=""></td>
